# DRI-EDIA-F4A

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code of Conduct.md  MeetTheTeam.md  README.md  _config.yml  index.html  index.md
docs/: _config.yml  index.md  tree_species_classification.md  tree_species_classification.vis.md
reports/figures/: list.md
reports/meetings/: expert-meeting.md  first_meeting_sum.md  meeting.md  meetings.md  planning-workshops.md
reports/presentations/: list.md
reports/workshops/: Presentation Draft.md  Presentation-speaker.html  Presentation.html  Presentation.qmd  UploadingZenodo.html  pp.scss  workshop-1-prep.md  workshop-2-prep.md  workshop-3-prep.md  ws-1-outline.md
reports/workshops/workshop-1/: SarahNotes.md  UploadingZenodo.md
reports/workshops/workshop-2/: README.md
src/: README.md
src/Alliance_tutorial/: intro_alliance.md  training_on_cloud_steps.md
src/tree_species_classification/: README.md  preprocess_data.md  pyproject.toml  tree_species_classification.html  tree_species_classification.ipynb  tree_species_classification.md
src/workshop2/: README.md  requirements.txt
src/workshop2/python/: distributed.ipynb  unsupervised_learning.ipynb
src/workshop2/python/data/: 06847.laz
